--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Interior Design, Athlone, Ireland">
-        <meta name="keywords" content="interior design, interior, design, athlone, ireland">
+        <meta name="description" content="abhi Interior Design, Athlone, Ireland">
+        <meta name="keywords" content="abhi interior design, interior, design, athlone, ireland">
         <title>Interior Design</title>
         <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <h1>Interior Design</h1>
+            <h1>Abhi Interior Design</h1>
             <label for="nav-toggle" class="nav-toggle-label" aria-label="Menu">
                 <i class="fa-solid fa-bars"></i>
             </label>
